--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Todo</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 user-scalable=no"
+    />
+    <!-- <link
+      rel="stylesheet"
+      href="https://todomvc.com/examples/vanillajs/node_modules/todomvc-app-css/index.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://todomvc.com/examples/vanillajs/node_modules/todomvc-common/base.css"
+    /> -->
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>ToDo</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
-  <link rel="stylesheet" href="https://todomvc.com/examples/vanillajs/node_modules/todomvc-app-css/index.css">
-  <link rel="stylesheet" href="https://todomvc.com/examples/vanillajs/node_modules/todomvc-common/base.css">
-  <!-- <link rel="stylesheet" href="styles/style.css"> -->
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
